examples/test/testpolicy15865.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15865
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key2: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value33
      podSelector:
        matchLabels:
          key4: value10
          key7: value47
          key9: value32
